--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -131,8 +131,12 @@ en:
       shared_practice_deleted: "Attention! This practices has been deleted by the owner."
     destroy:
       undo_notice: "The practice has been deleted, you can %{undo_link} or %{destroy_link}."
+      destroy_completely: "destroy completely"
+      undo: "undo"
     update:
       restore_notice: "Your practice has been restored."
+    create:
+      duplicate_notice: "You can now start editing the duplicated practice."
   shared:
     confirm_dialog:
       title: "Confirm delete"
@@ -228,12 +232,12 @@ en:
     config: "Configure"
     preferences: "Preferences"
     invite: "Invite"
-    remove: "remove"
+    remove: "Remove"
     play_preferences: "Play preferences"
     upgrade_now: "Upgrade Now!"
-    destroy_completely: "destroy completely"
     undo: "undo"
     restore: "restore"
+    duplicate: "duplicate"
   practice_event:
     help:
       practice: "Choose the practice."
